# llmstxt-social

./: .env.example  .env.production.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  HANDOFF.md  INSTALL.md  LICENSE  LOCAL.md  MISTAKES.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PLAN.md  QUICKSTART.md  README.md  SECURITY-REVIEW.md  STATE.md  assessment-20260111-100135.json  assessment-20260111-100135.md  claude-code-prompt.md  docker-compose.single.yml  docker-compose.yml  llmstxt-generator-spec-v2.md  mkdocs.yml  pyproject.toml  quick-reference.md  setup-prerequisites.md  test_api_key.py  test_monorepo.py
.claude/: settings.local.json
.claude/skills/org-idea/: SKILL.md
.claude/skills/org-strategy/: SKILL.md
.do/: app.yaml
deploy/: DROPLET.md
deploy/caddy/: Caddyfile
deploy/murmurations/: README.md  open_org_profile-v0.1.0.json  reference_profile.json
deploy/scripts/: check-env.sh  setup-vm.sh  switch-to-single.sh  update-stack.sh
deploy/systemd/: llmstxt.service
docs/: .docs-state.json  STRIPE_SETUP.md  changelog.md  index.md  saas-architecture.md  user-guide.md
examples/charities/: .gitkeep
examples/funders/: .gitkeep
open-org/: open-org-phase1-spec.md
src/llmstxt_social/: __init__.py  analyzer.py  cli.py  extractor.py  generator.py  validator.py
tests/: __init__.py  test_360giving.py  test_charity_commission.py  test_extractor.py  test_generator.py  test_validator.py
tests/fixtures/: real_world_corpus.yaml
tests/reports/: baseline_v0.1.md  baseline_v0.2.md  baseline_v0.3.md  baseline_v0.4.md  baseline_v0.5.md
(+9 files in other folders)
